--- a/views/index.html
+++ b/views/index.html
@@ -80,30 +80,37 @@
         <div class="form-group">
           <label>ID</label>
           <input id="studentId" class="form-control form-controlad" placeholder="ID" />
+          <span class="sp-thongbao text-danger" id="txtStudentId"></span>
         </div>
         <div class="form-group">
           <label>Name</label>
           <input id="studentName" class="form-control form-controlad" placeholder="Name" />
+          <span class="sp-thongbao text-danger" id="txtStudentName"></span>
         </div>
         <div class="form-group">
           <label>Address</label>
           <input id="studentAddress" class="form-control form-controlad" placeholder="Address" />
+          <span class="sp-thongbao text-danger" id="txtStudentAddress"></span>
         </div>
         <div class="form-group">
           <label>Email</label>
           <input id="studentEmail" class="form-control form-controlad" placeholder="Email" />
+          <span class="sp-thongbao text-danger" id="txtStudentEmail"></span>
         </div>
         <div class="form-group">
           <label>Math</label>
           <input id="math" class="form-control form-controlad" placeholder="" />
+          <span class="sp-thongbao text-danger" id="txtMath"></span>
         </div>
         <div class="form-group">
           <label>Physics</label>
           <input id="physics" class="form-control form-controlad" placeholder="" />
+          <span class="sp-thongbao text-danger" id="txtPhysics"></span>
         </div>
         <div class="form-group">
           <label>Chemistry</label>
           <input id="chemistry" class="form-control form-controlad" placeholder="" />
+          <span class="sp-thongbao text-danger" id="txtChemistry"></span>
         </div>
       </div>
       <div class="modal-footer" id="modal-footer-S">
@@ -124,26 +131,32 @@
         <div class="form-group">
           <label>ID</label>
           <input id="employeeId" class="form-control form-controlad" placeholder="ID" />
+          <span class="sp-thongbao text-danger txtId " id="txtEmployeeId"></span>
         </div>
         <div class="form-group">
           <label>Name</label>
           <input id="employeeName" class="form-control form-controlad" placeholder="Name" />
+          <span class="sp-thongbao text-danger" id="txtEmployeeName"></span>
         </div>
         <div class="form-group">
           <label>Address</label>
           <input id="employeeAddress" class="form-control form-controlad" placeholder="Address" />
+          <span class="sp-thongbao text-danger" id="txtEmployeeAddress"></span>
         </div>
         <div class="form-group">
           <label>Email</label>
           <input id="employeeEmail" class="form-control form-controlad" placeholder="Email" />
+          <span class="sp-thongbao text-danger" id="txtEmployeeEmail"></span>
         </div>
         <div class="form-group">
           <label>Number of working days</label>
           <input id="days" class="form-control form-controlad" placeholder="" />
+          <span class="sp-thongbao text-danger" id="txtDays"></span>
         </div>
         <div class="form-group">
           <label>Daily Salary</label>
           <input id="salaryUnit" class="form-control form-controlad" placeholder="" />
+          <span class="sp-thongbao text-danger" id="txtSalaryUnit"></span>
         </div>
       </div>
       <div class="modal-footer" id="modal-footer-E">
@@ -164,26 +177,32 @@
         <div class="form-group">
           <label>ID</label>
           <input id="customerId" class="form-control form-controlad" placeholder="ID" />
+          <span class="sp-thongbao text-danger" id="txtCustomerId"></span>
         </div>
         <div class="form-group">
           <label>Name</label>
           <input id="customerName" class="form-control form-controlad" placeholder="Name" />
+          <span class="sp-thongbao text-danger" id="txtCustomerName"></span>
         </div>
         <div class="form-group">
           <label>Address</label>
           <input id="customerAddress" class="form-control form-controlad" placeholder="Address" />
+          <span class="sp-thongbao text-danger" id="txtCustomerAddress"></span>
         </div>
         <div class="form-group">
           <label>Email</label>
           <input id="customerEmail" class="form-control form-controlad" placeholder="Email" />
+          <span class="sp-thongbao text-danger" id="txtCustomerEmail"></span>
         </div>
         <div class="form-group">
           <label>Name of company</label>
           <input id="company" class="form-control form-controlad" placeholder="" />
+          <span class="sp-thongbao text-danger" id="txtCompany"></span>
         </div>
         <div class="form-group">
           <label>Bill Value</label>
           <input id="billValue" class="form-control form-controlad" placeholder="" />
+          <span class="sp-thongbao text-danger" id="txtbillValue"></span>
         </div>
         <div class="form-group">
           <label>Feedback</label>
@@ -192,6 +211,7 @@
             <option value='Good' >Good</option>
             <option value='Bad' >Bad</option>
         </select>
+        <span class="sp-thongbao text-danger" id="txtInputRate"></span>
         </div>
       </div>
       <div class="modal-footer" id="modal-footer-C">
